<resources>
    <string name="app_name">TaskManager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_task">NEW TASK</string>
    <string name="tasks">TASKS</string>
    <string name="task_name">TASK NAME:</string>
    <string name="task_date">TASK DATE</string>
    <string name="task_note">TASK NOTE</string>
    <string name="create_task">CREATE TASK</string>
    <string name="SEE_DETAILS">SEE DETAILS</string>
    <string name="DELETE_TASK">DELETE TASK</string>
    <string name="empty_string" />
</resources>
